chore: resize pictures

--- a/24-1/zpravy-2024-q1.tex
+++ b/24-1/zpravy-2024-q1.tex
@@ -206,7 +206,8 @@ Výborně funguje \textbf{oddíl šplhu} (osmimetrové lano ze sedu bez příraz
 
 10. 2. 2023 se konal \textbf{Memoriál Jana Vorla} – přátelské gymnastické závody pro dorostence a muže, které se konaly již po jedenácté, připomínají památku našeho předčasně zesnulého cvičitele, vynikajícího gymnasty a kamaráda. Závodilo 15 dorostenců a mužů na prostných, přeskoku, kruzích, bradlech a hrazdě. Byly vidět pěkné sestavy (třeba i veletoče na hrazdě). S~rozhodčími a diváky celkem 30 účastníků.
 
-
+\clearpage
+\vspace*{-48pt}
 \subpost{Připomenutí našich zimních akcí: kulturní a společenské akce}
 \textbf{Mikuláš} se 4 čerty a 9 anděly se v~sokolovně objevil už ve čtvrtek 30. listopadu. Nejprve zavítal do hodiny rodičů a dětí a předškoláků a pak přišlo na řadu žactvo. U~žactva se po rozcvičce setmělo a do sálu osvětleného svíčkami vnikli čerti, aby si odnesli zlobivá dítka, ale nikoho si zatím neodnesli (zlobivci se prý polepší). Pak už si Mikuláš poslechl spoustu básniček a slyšel také písničky za doprovodu kytary. Andělé rozdali celkem 170 balíčků.
 
@@ -250,6 +251,8 @@ Na jaře musí zúčastnění počítat s~perným nácvikem, občasným třeba i
 
 Tak ať nám jdou nácviky od ruky, ať je na každé hodině plná každá značka (pak jde nácvik mnohem lépe, než když polovina chybí) a koncem dubna už vše umíme, abychom to mohli o~víkendu 25.–⁠⁠⁠⁠⁠26. května 2024 naplno předvést na župním sletu v~Brandýse nad Labem. Vlastní slet se bude konat od 30. června 2024 (to bude Sletový průvod) až do 4.–⁠⁠⁠⁠⁠5. 7. 2024 (dvě hlavní sletová vystoupení).
 
+\clearpage
+\vspace*{-48pt}
 \subpost{Závěrem\,\dots{}}
 Jsem strašně rád, že naši cvičitelé neustále přicházejí s~novými podněty pro činnost jednoty. Celou zimu například chodili hrát hokej a upevňovali tak své kamarádství. Další aktivitou jsou pravidelné tančírny v~sokolovně, už 2 roky v~naší jednotě funguje loutkové divadlo a jejich představení jste už mohli shlédnout. Předposledním počinem je cvičení akrojógy a tím zatím posledním je obnovení tradiční akce Se sokolem do divadla.
 
@@ -455,7 +458,7 @@ Za libeňské všestraňačky
 \newgeometry{margin=0pt}
 \pagestyle{blank}
 \begin{center}
-  \noindent\includegraphics[width=\linewidth]{Akademie_24.pdf}
+  \noindent\includegraphics[width=\linewidth]{Akademie_24.png}
 \end{center}
 \restoregeometry
 
@@ -478,7 +481,7 @@ K~podpoře a propagaci dárcovství pořádají sokolské jednoty i hromadné sp
 Poslední hromadný odběr v~Tyršově domě se konal 16. 2. u~příležitosti výročního dne založení Sokola a odebráno bylo přes 60 dárců. 
 
 \vfill
-\noindent\includegraphics[width=\linewidth]{foto_kapka_krve.jpg}
+\noindent\includegraphics[width=\linewidth]{foto_kapka_krve-scaled.jpg}
 \vfill
 \clearpage
 
