--- a/24-2/zpravy-2024-q2.tex
+++ b/24-2/zpravy-2024-q2.tex
@@ -97,7 +97,7 @@ Na zdar našemu sletu!
       27. 7. – 10. 8. & Letní tábor Káňat (Velhartice) \\
       10. 8. – 1. 9. & Letní tábor Jilmu a Veverek (Velhartice) \\
       30. 8. – 1. 9. & bourání tábora (Velhartice, pomocníci vítáni, informace u~vedoucích TO)\\
-      2. 9. (út) & zahájení cvičení žákyň, Rodičů a dětí a Předškolních dětí \\
+      2. 9. (po) & zahájení cvičení žákyň, Rodičů a dětí a Předškolních dětí \\
       3. 9. (út) & zahájení cvičení žáků \\
       19. 9. (čt) & 24. ročník Běhu strmého \\
       28. 9. (so) & Noc sokoloven \\
