oprava po kontrole

--- a/24-3/zpravy-2024-q3.tex
+++ b/24-3/zpravy-2024-q3.tex
@@ -46,7 +46,7 @@
   \textbf{Krátké vzpomínání bývalého náčelníka}
 \end{center}
 
-Zakrátko to bude půlstoletí od mého prvního vstupu do libeňské sokolovny. Bylo mi 16 let a brzy jsem začal pomáhat cvičitelům žáků. Tehdejší náčelník a náčelnice odboru ZRTV František a Marie Kodlovi vedli cvičení žactva tak, jak to znali z~bývalého Sokola, včetně výletů do přírody. Při TJ Meteor dobře fungovala i aktivní seniorská skupina – Věrná garda. Ti všichni také Sokol pamatovali a měli ho hluboko v~sobě. Byla na nich znát jakási zvláštní radost ze společných aktivit, vytrvalá chuť do života. Takto nepřímo jsem ještě před rokem 1989 postupně poznával to, co bychom dnes nazvali sokolský duch. A~toto upřímné, poctivé zaujetí pro dobrou věc se pak dále svobodně rozvíjelo ve všech činnostech obnovené tělocvičné jednoty.
+Zakrátko to bude půlstoletí od mého prvního vstupu do libeňské sokolovny. Bylo mi 16 let a brzy jsem začal pomáhat cvičitelům žáků. Tehdejší náčelník a náčelnice odboru ZRTV\footnote{Základní a Rekreaní Tělesná Výchova} František a Marie Kodlovi vedli cvičení žactva tak, jak to znali z~bývalého Sokola, včetně výletů do přírody. Při TJ Meteor dobře fungovala i aktivní seniorská skupina – Věrná garda. Ti všichni také Sokol pamatovali a měli ho hluboko v~sobě. Byla na nich znát jakási zvláštní radost ze společných aktivit, vytrvalá chuť do života. Takto nepřímo jsem ještě před rokem 1989 postupně poznával to, co bychom dnes nazvali sokolský duch. A~toto upřímné, poctivé zaujetí pro dobrou věc se pak dále svobodně rozvíjelo ve všech činnostech obnovené tělocvičné jednoty.
 
 Po prvním novodobém všesokolském sletu v~r. 1994 jsem se po 18 letech v~Libni rozloučil. Celý sletový rok 1993–1994 už jsem totiž dojížděl z~nového bydliště na Barrandově a dále to nebylo únosné. To loučení však pro mě obsahovalo velikou zpětnou radost a také naději do budoucna. Slet vyzněl celkově výborně a naše Libeň vyslala mnoho cvičenců, žáků měla dokonce nejvíc v~celé republice. A~hlavně jsem měl komu předat jak turistický oddíl Jilm, založený 1982, tak i náčelnictví svěřené mi v~r. 1990 Františkem Kodlem: obojí tenkrát převzal nynější starosta Jiří Novák a obojí dovedl výš, přesně v~sokolském duchu.
 
@@ -150,11 +150,7 @@ O~posledním víkendu 30. 8. – 1. 9. přijelo pomoct 18 pomocníků z~řad cvi
 Celkem tedy 6 týdnů táborů s~68 táborníky (27 dospělých a 41 dětí).
 
 \subpost{Podzim v~oddíle žáků a dorostenců}
-V~sobotu 13. 4. se 89 Libeňáků sešlo na 66. Jarním Výletě Libeňského Sokola. Spolu s~jednotami ze Starého Města, Kobylis a Zlíchova jsme byli účastníky 57. srazu v~přírodě pražských žup. Vlakem jsme vyrazili z~Vysočan do Kojetic a pěšky pak po zelené k~jezírku V~lomu, kde proběhla Modrá stuha. Díky letošnímu teplému počasí už byla voda vyhřátá na 16,5\,°C. Po nástupu s~Písničkou, Jazykohrátkami a Pamatovačkou jsme se přesunuli kousek do lesa na hru Džungle a po ní jsme kolem kostela a zámku v~Lobkovicích došli na místo srazu – louku na břehu Labe. Následoval oběd (s~Vařením pokrmu z~mléka) a pak už byla na programu hlavní věc dnešního dne – župní kolo Zálesáckého závodu zdatnosti (ZZZ). Účastnilo se 11 trojic žactva a 4 trojice dorostu. Nejprve byla mimo okruh disciplína oheň, pak se běžel okruh s~9 stanovišti (hvězdy, morseovka, uzlování, překážky, šošonský běh, hody na cíl, topografie, přírodniny, pamětihodnosti) a po doběhu ještě zdravověda a práce s~nožem. V~žactvu vyhrál Jilm před Starým Městem a další trojicí Jilmu a v~dorostu zvítězil Jilm před Veverkami a Starým Městem. Na celostátní finále postupují vždy první dvě trojice. V~mezidobí proběhl i miniZZZ pro menší děti. Pak už nástup s~vyhlášením výsledků obou závodů, rozdání Pamětních lístečků, volba data Podzimního srazu (12. 10.) a rychle do Neratovic na vlak. Byla to vydařená sobota s~vydařeným počasím.
 
-O~víkendu 10.–12. května se konalo celostátní finále ZZZ v~Úpici. Ve starším žactvu se utkalo 20 trojic a Libeňská \textbf{trojka z~oddílů Jilm a Veverky vybojovala úžasné 2. místo}! V~dorostu bylo 13 trojic a naše hlídka obsadila 6. místo.
-
-\vspace*{12pt}
 \begin{center}
   \noindent\textbf{Organizační informace}
 \end{center}
