--- a/24-3/zpravy-2024-q3.tex
+++ b/24-3/zpravy-2024-q3.tex
@@ -46,7 +46,7 @@
   \textbf{Krátké vzpomínání bývalého náčelníka}
 \end{center}
 
-Zakrátko to bude půlstoletí od mého prvního vstupu do libeňské sokolovny. Bylo mi 16 let a brzy jsem začal pomáhat cvičitelům žáků. Tehdejší náčelník a náčelnice odboru ZRTV\footnote{Základní a Rekreaní Tělesná Výchova} František a Marie Kodlovi vedli cvičení žactva tak, jak to znali z~bývalého Sokola, včetně výletů do přírody. Při TJ Meteor dobře fungovala i aktivní seniorská skupina – Věrná garda. Ti všichni také Sokol pamatovali a měli ho hluboko v~sobě. Byla na nich znát jakási zvláštní radost ze společných aktivit, vytrvalá chuť do života. Takto nepřímo jsem ještě před rokem 1989 postupně poznával to, co bychom dnes nazvali sokolský duch. A~toto upřímné, poctivé zaujetí pro dobrou věc se pak dále svobodně rozvíjelo ve všech činnostech obnovené tělocvičné jednoty.
+Zakrátko to bude půlstoletí od mého prvního vstupu do libeňské sokolovny. Bylo mi 16 let a brzy jsem začal pomáhat cvičitelům žáků. Tehdejší náčelník a náčelnice odboru ZRTV\footnote{Základní a Rekreační Tělesná Výchova} František a Marie Kodlovi vedli cvičení žactva tak, jak to znali z~bývalého Sokola, včetně výletů do přírody. Při TJ Meteor dobře fungovala i aktivní seniorská skupina – Věrná garda. Ti všichni také Sokol pamatovali a měli ho hluboko v~sobě. Byla na nich znát jakási zvláštní radost ze společných aktivit, vytrvalá chuť do života. Takto nepřímo jsem ještě před rokem 1989 postupně poznával to, co bychom dnes nazvali sokolský duch. A~toto upřímné, poctivé zaujetí pro dobrou věc se pak dále svobodně rozvíjelo ve všech činnostech obnovené tělocvičné jednoty.
 
 Po prvním novodobém všesokolském sletu v~r. 1994 jsem se po 18 letech v~Libni rozloučil. Celý sletový rok 1993–1994 už jsem totiž dojížděl z~nového bydliště na Barrandově a dále to nebylo únosné. To loučení však pro mě obsahovalo velikou zpětnou radost a také naději do budoucna. Slet vyzněl celkově výborně a naše Libeň vyslala mnoho cvičenců, žáků měla dokonce nejvíc v~celé republice. A~hlavně jsem měl komu předat jak turistický oddíl Jilm, založený 1982, tak i náčelnictví svěřené mi v~r. 1990 Františkem Kodlem: obojí tenkrát převzal nynější starosta Jiří Novák a obojí dovedl výš, přesně v~sokolském duchu.
 
@@ -614,7 +614,7 @@ Josef Kubišta jako kouč
 
 \vspace*{6pt}
 
-První zápas byl proti týmu s~názvem England under 23\,s. První tah 48\,s, druhý 37\,s, oba jsme prohráli bez trestného bodu.
+První zápas byl proti týmu s~názvem England under 23's. První tah 48\,s, druhý 37\,s, oba jsme prohráli bez trestného bodu.
 
 Druhý zápas byl proti klubu Goiherri z~Baskicka. První tah trval 2\,min 13\,s! Pokud jste při čtení sledovali pozorně časy našich tahů, můžete si všimnout zlepšení. Druhý tah trval 1\,min a 6\,s. Oba jsme prohráli bez trestného bodu.
 
@@ -654,7 +654,7 @@ Celý den bylo vedro, jak reportér TOW Jamie napsal na facebook \luv{}Hot as in
 Dresy jsme dostali domů až poměrně pozdě večer, a tak jsme je místo praní jen rozvěsili k~uschnutí.
 
 
-\vspace*{12pt}
+\vspace*{20pt}
 \noindent\textbf{neděle 8. září – druhý den mistrovství světa}
 \vspace*{6pt}
 
@@ -678,7 +678,7 @@ Petr Kříž
 
 a Jonáš Čábelka jako kotevník
 
-\vspace*{6pt}
+\clearpage
 
 Pavla Dvořáková jako vodonoška
 
