fix: návrhy z mailu

--- a/almanach-2024/almanach-2024.tex
+++ b/almanach-2024/almanach-2024.tex
@@ -27,7 +27,7 @@
 % \usepackage[T1]{fontenc} 
 
 \usepackage{anyfontsize}
-\newcommand{\titlesize}{\fontsize{56pt}{67pt}}
+\newcommand{\titlesize}{\fontsize{36pt}{54pt}}
 
 
 \usepackage[dvipsnames]{xcolor}
@@ -76,7 +76,6 @@
 \setlength{\oddsidemargin}{-4mm}
 \setlength{\evensidemargin}{-14mm} %13 15
 
-\setlength{\parskip}{0pt}
 
 % \addtolength{\oddsidemargin}{-4mm} \addtolength{\evensidemargin}{-4mm} %% printer shift
 
@@ -107,24 +106,28 @@
 \usepackage[textfont=it]{subcaption}
 
 \begin{document}
-
 %% obálka
+\setlength{\oddsidemargin}{-24pt}
 \pagecolor{sokolred}
 \color{white}
 \pagenumbering{gobble}
 \begin{center}
+  \setlength{\parskip}{6pt}
+  \vspace*{18pt}
+  {\fontsize{56pt}{66pt}\fugner 140 let}
+
+  {\titlesize\tyrs tělocvičné jednoty}
+  
+  {\titlesize\tyrs Sokol Libeň}
 
   \vspace*{\fill}
 
   \includegraphics*[width=0.9\textwidth]{./Sokolovna-kresba-white.png}
 
-  \vspace{134pt}
-
-  {\titlesize\fugner Almanach}
-
-  {\titlesize\tyrs SOKOLA LIBEŇ}
-
   \vspace*{\fill}
+
+  {\titlesize\fugner 1884–2024}
+  \vspace*{-1cm}
 \end{center}
 \clearpage
 
@@ -132,22 +135,27 @@
 \nopagecolor
 
 \null\clearpage
+\setlength{\oddsidemargin}{-4mm}
+\setlength{\evensidemargin}{-14mm}
 
 % titulka
 \begin{center}
+  \setlength{\parskip}{6pt}
+  \vspace*{18pt}
+  {\fontsize{56pt}{66pt}\fugner 140 let}
+
+  {\titlesize\tyrs tělocvičné jednoty}
+  
+  {\titlesize\tyrs Sokol Libeň}
 
   \vspace*{\fill}
 
   \includegraphics*[width=0.9\textwidth]{./Sokolovna-kresba-black.png}
 
-  \vspace{134pt}
-
-  {\titlesize\fugner Almanach}
-
-  {\titlesize\tyrs SOKOLA LIBEŇ}
-
-
   \vspace*{\fill}
+
+  {\titlesize\fugner 1884–2024}
+  \vspace*{-1cm}
 \end{center}
 
 \mbox{}
@@ -155,7 +163,7 @@
 
 % ISBN
 \vspace*{\fill}
-{ \parindent0pt \parskip6pt
+{ \parindent0pt \parskip3pt
 140 let tělocvičné jednoty Sokol Praha-Libeň
 
 Editor: Jan Přech 
@@ -183,6 +191,7 @@ ISBN 978-80-11-05742-8
 % \mainmatter
 
 \pagenumbering{arabic}
+\setlength{\parskip}{0pt}
 
 \section{Úvod}
 
@@ -218,13 +227,15 @@ Přeji naší jednotě k~jejímu 120. výročí mnoho zdaru a úspěchu do dalš
 \clearpage
 
 \section{Založení T.~J. Sokol Libeň}
+\vspace{\baselineskip}
+
+\textit{Historii jednoty až do roku 1984 sepsal: br. Adolf Peťule (1908–1987)}
+
 \subsection{První kroky}
-Historii jednoty až do roku 1984 sepsal: br. Adolf Peťule (1908–1987)
 
 \begin{center}
   \textit{"V pravdě stůj, vlast miluj, nechtěj porobu, služ vlasti, národu!"}
 \end{center}
-
 \noindent Slova chorálu v~závěru vystoupení mužského dorostu na VIII. sletu všesokolském v~roce 1926 byla již o~42 let dříve vůdčím heslem několika pokrokových a vlasteneckých občanů, jež osud zavál do tehdejší vesnice Libně, v~okresu karlínském, aby tu byli šiřiteli národní osvěty. Buďte zde pro trvalou a oživovanou paměť zachována jejich jména:
 
 \textbf{Ladislav Verner}, nar. 7. 1. 1856 v~Byháni, učitel obecné školy chlapecké od 21. 4. 1882.
